--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -108,16 +108,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "RbQx30WIGlcX",
-        "outputId": "15508e59-4509-47a0-f6e1-eb582e0d4ec7",
+        "outputId": "4a51851b-1b96-4aae-f0e0-02f60740d01f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 343
+          "height": 195
         }
       },
       "source": [
-        "data.head(10)"
+        "data.head(5)"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -189,46 +189,6 @@
               "      <td>782</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>2020</td>\n",
-              "      <td>2</td>\n",
-              "      <td>01/02/2020</td>\n",
-              "      <td>602</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>2</td>\n",
-              "      <td>28/02/2019</td>\n",
-              "      <td>391</td>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>8</td>\n",
-              "      <td>01/08/2019</td>\n",
-              "      <td>784</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>12</td>\n",
-              "      <td>01/12/2019</td>\n",
-              "      <td>606</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>10</td>\n",
-              "      <td>01/10/2019</td>\n",
-              "      <td>298</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
@@ -239,18 +199,323 @@
               "1       2020         4  01/04/2020         860     1\n",
               "2       2019        11  05/11/2019        1673     1\n",
               "3       2020         2  01/02/2020        1419     1\n",
-              "4       2019         8  01/08/2019         782     1\n",
-              "5       2020         2  01/02/2020         602     1\n",
-              "6       2019         2  28/02/2019         391     4\n",
-              "7       2019         8  01/08/2019         784     1\n",
-              "8       2019        12  01/12/2019         606     1\n",
-              "9       2019        10  01/10/2019         298     1"
+              "4       2019         8  01/08/2019         782     1"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x5gI0SJbW5W6"
+      },
+      "source": [
+        "encabezados= ['Año','Mes','Fecha','Antiguedad','Cant_Bajas']\n",
+        "data.columns=encabezados"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lB5IaAuJXHsS",
+        "outputId": "947b9994-3571-4033-eb27-d6135d2de9eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        }
+      },
+      "source": [
+        "data.head(5)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Año</th>\n",
+              "      <th>Mes</th>\n",
+              "      <th>Fecha</th>\n",
+              "      <th>Antiguedad</th>\n",
+              "      <th>Cant_Bajas</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>11</td>\n",
+              "      <td>01/11/2019</td>\n",
+              "      <td>1068</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2020</td>\n",
+              "      <td>4</td>\n",
+              "      <td>01/04/2020</td>\n",
+              "      <td>860</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>11</td>\n",
+              "      <td>05/11/2019</td>\n",
+              "      <td>1673</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2020</td>\n",
+              "      <td>2</td>\n",
+              "      <td>01/02/2020</td>\n",
+              "      <td>1419</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>8</td>\n",
+              "      <td>01/08/2019</td>\n",
+              "      <td>782</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    Año  Mes       Fecha  Antiguedad  Cant_Bajas\n",
+              "0  2019   11  01/11/2019        1068           3\n",
+              "1  2020    4  01/04/2020         860           1\n",
+              "2  2019   11  05/11/2019        1673           1\n",
+              "3  2020    2  01/02/2020        1419           1\n",
+              "4  2019    8  01/08/2019         782           1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wF0jy-BcazD7",
+        "outputId": "65c6e2b2-adb0-4b7f-de12-b9e71231d50c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        }
+      },
+      "source": [
+        "data.dtypes"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Año            int64\n",
+              "Mes            int64\n",
+              "Fecha         object\n",
+              "Antiguedad     int64\n",
+              "Cant_Bajas     int64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S5N5IgkXbwjx",
+        "outputId": "008d8ccc-8dc6-4b3b-def9-005aa7704c00",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 373
+        }
+      },
+      "source": [
+        "data.describe(include='all')"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Año</th>\n",
+              "      <th>Mes</th>\n",
+              "      <th>Fecha</th>\n",
+              "      <th>Antiguedad</th>\n",
+              "      <th>Cant_Bajas</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>17101.000000</td>\n",
+              "      <td>17101.000000</td>\n",
+              "      <td>17101</td>\n",
+              "      <td>17101.000000</td>\n",
+              "      <td>17101.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>unique</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>315</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>top</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>01/02/2020</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>freq</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>848</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>2019.358459</td>\n",
+              "      <td>5.469797</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>902.821531</td>\n",
+              "      <td>1.561312</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>0.479562</td>\n",
+              "      <td>3.262741</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>493.846888</td>\n",
+              "      <td>1.115205</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>2019.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>2019.000000</td>\n",
+              "      <td>3.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>489.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>2019.000000</td>\n",
+              "      <td>5.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>847.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>2020.000000</td>\n",
+              "      <td>7.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1289.000000</td>\n",
+              "      <td>2.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>2020.000000</td>\n",
+              "      <td>12.000000</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>7276.000000</td>\n",
+              "      <td>18.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                 Año           Mes       Fecha    Antiguedad    Cant_Bajas\n",
+              "count   17101.000000  17101.000000       17101  17101.000000  17101.000000\n",
+              "unique           NaN           NaN         315           NaN           NaN\n",
+              "top              NaN           NaN  01/02/2020           NaN           NaN\n",
+              "freq             NaN           NaN         848           NaN           NaN\n",
+              "mean     2019.358459      5.469797         NaN    902.821531      1.561312\n",
+              "std         0.479562      3.262741         NaN    493.846888      1.115205\n",
+              "min      2019.000000      1.000000         NaN      0.000000      1.000000\n",
+              "25%      2019.000000      3.000000         NaN    489.000000      1.000000\n",
+              "50%      2019.000000      5.000000         NaN    847.000000      1.000000\n",
+              "75%      2020.000000      7.000000         NaN   1289.000000      2.000000\n",
+              "max      2020.000000     12.000000         NaN   7276.000000     18.000000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
         }
       ]
     },
