--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -585,13 +585,71 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Qji-ahB_89nD"
+        "id": "WLKCRVJ2MmrV"
       },
       "source": [
-        ""
+        "x=data.drop(['Cant_Bajas'],axis=1)\n",
+        "y=data.Cant_Bajas  "
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "19Ctqj3hMOGB"
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qji-ahB_89nD"
+      },
+      "source": [
+        "from sklearn.svm import SVR\n",
+        "\n",
+        "svr_ = SVR(Kernel='linear',C=1.0,epsilon=0.2)\n",
+        "svr_.fit(x_train, y_train)\n",
+        "y_pred= svr_.predict(x_test)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nwBD7sd8PYZ9",
+        "outputId": "1292717b-0303-41ce-8ec3-fa5ab61a0dda",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "type(x)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "pandas.core.frame.DataFrame"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
     }
   ]
 }
