--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 1,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -72,22 +72,22 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "4ef4a806-2e37-436a-e913-01e339e1a697",
+        "outputId": "1dd14eaa-9645-4b69-c215-c662198e1e17",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 54
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -99,16 +99,16 @@
         "id": "0JYqth2Ty8-k"
       },
       "source": [
-        "data = pd.read_csv('/content/drive/My Drive/Dataset/M_BAJAS.txt',delimiter='~')\n"
+        "data = pd.read_csv('/content/drive/My Drive/Dataset/M_BAJAS.txt',delimiter='~')"
       ],
-      "execution_count": 3,
+      "execution_count": 125,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "RbQx30WIGlcX",
-        "outputId": "5971d0cb-e388-478e-8da1-fc96c7d483c3",
+        "outputId": "1c80f1a8-6fb5-4b98-b394-f45b696165c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -117,7 +117,7 @@
       "source": [
         "data.head(5)"
       ],
-      "execution_count": 4,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 126
         }
       ]
     },
@@ -218,14 +218,14 @@
         "encabezados= ['Año','Mes','Fecha','Antiguedad','Cant_Bajas']\n",
         "data.columns=encabezados"
       ],
-      "execution_count": 5,
+      "execution_count": 130,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "lB5IaAuJXHsS",
-        "outputId": "f1aa3fba-67a0-425d-b46d-53bdde99fc55",
+        "outputId": "ef0a3ef8-45a2-462c-fbb3-d4c57aad2e17",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -234,7 +234,7 @@
       "source": [
         "data.head(5)"
       ],
-      "execution_count": 6,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -322,7 +322,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 131
         }
       ]
     },
@@ -330,7 +330,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "wF0jy-BcazD7",
-        "outputId": "5513eb47-ada9-4835-be56-74fc95926321",
+        "outputId": "abac2522-0b13-40a9-f83a-54d370f81ea5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 118
@@ -339,24 +339,54 @@
       "source": [
         "data.dtypes"
       ],
-      "execution_count": 7,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Año            int64\n",
-              "Mes            int64\n",
-              "Fecha         object\n",
-              "Antiguedad     int64\n",
-              "Cant_Bajas     int64\n",
+              "ANIO_BAJA      int64\n",
+              "MES_BAJA       int64\n",
+              "FECHA_BAJA    object\n",
+              "ANTIGUEDAD     int64\n",
+              "CANT           int64\n",
               "dtype: object"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 128
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MND5wUGBWhcM",
+        "outputId": "55db878f-b8bf-4706-f23f-ff252cb99af5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        }
+      },
+      "source": [
+        " #validamos datos faltantes\n",
+        " print(pd.isnull(data).sum())"
+      ],
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Año           0\n",
+            "Mes           0\n",
+            "Fecha         0\n",
+            "Antiguedad    0\n",
+            "Cant_Bajas    0\n",
+            "dtype: int64\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -364,7 +394,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "S5N5IgkXbwjx",
-        "outputId": "546c1974-a3b4-4548-c015-ec7736535721",
+        "outputId": "5d58b364-fe3e-46da-c7e5-f44d58df6356",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 373
@@ -373,7 +403,7 @@
       "source": [
         "data.describe(include='all')"
       ],
-      "execution_count": 8,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -515,7 +545,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 113
         }
       ]
     },
@@ -523,7 +553,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "lK3hH5q9eBqY",
-        "outputId": "1a0d9ed3-458e-4c64-ba34-70c527fc6af1",
+        "outputId": "5963d84f-590f-4cd2-8053-b383ee139ce5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
@@ -532,7 +562,7 @@
       "source": [
         "data.info "
       ],
-      "execution_count": 9,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -557,7 +587,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 114
         }
       ]
     },
@@ -574,12 +604,53 @@
         "#4 : 4 TRIMESTRE (280-365 DIAS)\n",
         "#5 : A 2 AÑOS (366-744 DIAS) \n",
         "#6 : A 4 AÑOS (745-1488 DIAS)\n",
-        "#7 : Mayor 4 años (Máximo DIAS 7276) \n",
-        "bins=[0,93,186,279,365,744,1488,7276]\n",
-        "names=[\"1\",\"2\",\"3\",\"4\",\"5\",\"6\",\"7\"]\n",
+        "#7 : Mayor 4 años (Máximo DIAS 17101) \n",
+        "bins=[0,93,186,279,365,744,1488,17110]\n",
+        "names=['1','2','3','4','5','6','7']\n",
         "data['Antiguedad'] = pd.cut(data['Antiguedad'],bins,labels=names)"
       ],
-      "execution_count": 10,
+      "execution_count": 132,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DN0uT17ujuNd",
+        "outputId": "4d25477b-7ee0-4321-8eb2-a1dbc563a023",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        }
+      },
+      "source": [
+        " #validamos datos faltantes\n",
+        " print(pd.isnull(data).sum())"
+      ],
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Año           0\n",
+            "Mes           0\n",
+            "Fecha         0\n",
+            "Antiguedad    0\n",
+            "Cant_Bajas    0\n",
+            "dtype: int64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fnuyxD9di4M3"
+      },
+      "source": [
+        "data.dropna(subset = ['Antiguedad'] , axis=0, inplace=True)"
+      ],
+      "execution_count": 135,
       "outputs": []
     },
     {
@@ -591,7 +662,7 @@
         "x=data.drop(['Cant_Bajas'],axis=1)\n",
         "y=data.Cant_Bajas  "
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -626,7 +697,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "nwBD7sd8PYZ9",
-        "outputId": "1292717b-0303-41ce-8ec3-fa5ab61a0dda",
+        "outputId": "d54626ca-a0af-4b06-f191-2c3ae18eec46",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -648,6 +719,225 @@
             "tags": []
           },
           "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fasvnm_iIByb",
+        "outputId": "720f2822-ee87-4905-c15f-6f849d359d3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "type(y)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "pandas.core.series.Series"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8YB699aGIG3P",
+        "outputId": "6cde1f8f-f9d0-45eb-c0d8-d9bfbe6a207d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 402
+        }
+      },
+      "source": [
+        "x"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Año</th>\n",
+              "      <th>Mes</th>\n",
+              "      <th>Fecha</th>\n",
+              "      <th>Antiguedad</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>11</td>\n",
+              "      <td>01/11/2019</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2020</td>\n",
+              "      <td>4</td>\n",
+              "      <td>01/04/2020</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>11</td>\n",
+              "      <td>05/11/2019</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2020</td>\n",
+              "      <td>2</td>\n",
+              "      <td>01/02/2020</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>8</td>\n",
+              "      <td>01/08/2019</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17096</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>8</td>\n",
+              "      <td>01/08/2019</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17097</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>4</td>\n",
+              "      <td>01/04/2019</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17098</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>11</td>\n",
+              "      <td>01/11/2019</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17099</th>\n",
+              "      <td>2020</td>\n",
+              "      <td>7</td>\n",
+              "      <td>01/07/2020</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17100</th>\n",
+              "      <td>2019</td>\n",
+              "      <td>3</td>\n",
+              "      <td>23/03/2019</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>17101 rows × 4 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        Año  Mes       Fecha Antiguedad\n",
+              "0      2019   11  01/11/2019          6\n",
+              "1      2020    4  01/04/2020          6\n",
+              "2      2019   11  05/11/2019          7\n",
+              "3      2020    2  01/02/2020          6\n",
+              "4      2019    8  01/08/2019          6\n",
+              "...     ...  ...         ...        ...\n",
+              "17096  2019    8  01/08/2019          6\n",
+              "17097  2019    4  01/04/2019          3\n",
+              "17098  2019   11  01/11/2019          5\n",
+              "17099  2020    7  01/07/2020          6\n",
+              "17100  2019    3  23/03/2019          5\n",
+              "\n",
+              "[17101 rows x 4 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DPhhF2WdIIer",
+        "outputId": "f525cdd5-47b9-4b10-d830-58cde6e18c7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 218
+        }
+      },
+      "source": [
+        "y"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0        3\n",
+              "1        1\n",
+              "2        1\n",
+              "3        1\n",
+              "4        1\n",
+              "        ..\n",
+              "17096    1\n",
+              "17097    1\n",
+              "17098    1\n",
+              "17099    1\n",
+              "17100    1\n",
+              "Name: Cant_Bajas, Length: 17101, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
         }
       ]
     }
