--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -656,13 +656,47 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "GjhCpQGmkfs4",
+        "outputId": "a2c0bf12-bf9b-4883-80cf-23499ac38519",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        }
+      },
+      "source": [
+        "data.dtypes"
+      ],
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Año              int64\n",
+              "Mes              int64\n",
+              "Fecha           object\n",
+              "Antiguedad    category\n",
+              "Cant_Bajas       int64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 137
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "WLKCRVJ2MmrV"
       },
       "source": [
-        "x=data.drop(['Cant_Bajas'],axis=1)\n",
-        "y=data.Cant_Bajas  "
+        "x= np.array(data.drop(['Cant_Bajas'],axis=1))\n",
+        "y= np.array(data['Cant_Bajas'])"
       ],
-      "execution_count": 19,
+      "execution_count": 140,
       "outputs": []
     },
     {
