--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -690,6 +690,85 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "mEKHKvJIsa5C",
+        "outputId": "dceeea2a-2cbb-4059-fd54-92e9129f4d18",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        }
+      },
+      "source": [
+        "data.corr(method ='pearson')"
+      ],
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Año</th>\n",
+              "      <th>Mes</th>\n",
+              "      <th>Cant_Bajas</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Año</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>-0.318232</td>\n",
+              "      <td>0.029800</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Mes</th>\n",
+              "      <td>-0.318232</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>-0.003926</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Cant_Bajas</th>\n",
+              "      <td>0.029800</td>\n",
+              "      <td>-0.003926</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                 Año       Mes  Cant_Bajas\n",
+              "Año         1.000000 -0.318232    0.029800\n",
+              "Mes        -0.318232  1.000000   -0.003926\n",
+              "Cant_Bajas  0.029800 -0.003926    1.000000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 146
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "WLKCRVJ2MmrV"
       },
       "source": [
