--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 101,
+      "execution_count": 165,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "1dd14eaa-9645-4b69-c215-c662198e1e17",
+        "outputId": "76501beb-9217-4a42-f508-1307ad5b828a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -82,7 +82,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 124,
+      "execution_count": 166,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,14 +101,14 @@
       "source": [
         "data = pd.read_csv('/content/drive/My Drive/Dataset/M_BAJAS.txt',delimiter='~')"
       ],
-      "execution_count": 125,
+      "execution_count": 167,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "RbQx30WIGlcX",
-        "outputId": "1c80f1a8-6fb5-4b98-b394-f45b696165c7",
+        "outputId": "b0f76e8b-ac51-4760-e789-ee090e9ec4b3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -117,7 +117,7 @@
       "source": [
         "data.head(5)"
       ],
-      "execution_count": 126,
+      "execution_count": 168,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 126
+          "execution_count": 168
         }
       ]
     },
@@ -218,14 +218,14 @@
         "encabezados= ['Año','Mes','Fecha','Antiguedad','Cant_Bajas']\n",
         "data.columns=encabezados"
       ],
-      "execution_count": 130,
+      "execution_count": 169,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "lB5IaAuJXHsS",
-        "outputId": "ef0a3ef8-45a2-462c-fbb3-d4c57aad2e17",
+        "outputId": "77b00ff3-322a-478e-9a3e-6def1e8b6f95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -234,7 +234,7 @@
       "source": [
         "data.head(5)"
       ],
-      "execution_count": 131,
+      "execution_count": 170,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -322,7 +322,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 131
+          "execution_count": 170
         }
       ]
     },
@@ -330,7 +330,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "wF0jy-BcazD7",
-        "outputId": "abac2522-0b13-40a9-f83a-54d370f81ea5",
+        "outputId": "7b039c30-0b0c-4b72-acb2-95268d0002c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 118
@@ -339,24 +339,24 @@
       "source": [
         "data.dtypes"
       ],
-      "execution_count": 128,
+      "execution_count": 171,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "ANIO_BAJA      int64\n",
-              "MES_BAJA       int64\n",
-              "FECHA_BAJA    object\n",
-              "ANTIGUEDAD     int64\n",
-              "CANT           int64\n",
+              "Año            int64\n",
+              "Mes            int64\n",
+              "Fecha         object\n",
+              "Antiguedad     int64\n",
+              "Cant_Bajas     int64\n",
               "dtype: object"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 128
+          "execution_count": 171
         }
       ]
     },
@@ -364,7 +364,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "MND5wUGBWhcM",
-        "outputId": "55db878f-b8bf-4706-f23f-ff252cb99af5",
+        "outputId": "e87d2b29-e985-4107-b674-183f7d9bb385",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 118
@@ -374,7 +374,7 @@
         " #validamos datos faltantes\n",
         " print(pd.isnull(data).sum())"
       ],
-      "execution_count": 112,
+      "execution_count": 172,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,7 +394,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "S5N5IgkXbwjx",
-        "outputId": "5d58b364-fe3e-46da-c7e5-f44d58df6356",
+        "outputId": "66871bec-043c-4624-f2db-5d3a83b88e20",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 373
@@ -403,7 +403,7 @@
       "source": [
         "data.describe(include='all')"
       ],
-      "execution_count": 113,
+      "execution_count": 173,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -545,7 +545,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 113
+          "execution_count": 173
         }
       ]
     },
@@ -553,7 +553,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "lK3hH5q9eBqY",
-        "outputId": "5963d84f-590f-4cd2-8053-b383ee139ce5",
+        "outputId": "7cdd10a2-ea8b-4c75-cb2b-9050ffef51d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
@@ -562,7 +562,7 @@
       "source": [
         "data.info "
       ],
-      "execution_count": 114,
+      "execution_count": 174,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,7 +587,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 114
+          "execution_count": 174
         }
       ]
     },
@@ -609,14 +609,14 @@
         "names=['1','2','3','4','5','6','7']\n",
         "data['Antiguedad'] = pd.cut(data['Antiguedad'],bins,labels=names)"
       ],
-      "execution_count": 132,
+      "execution_count": 175,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "DN0uT17ujuNd",
-        "outputId": "4d25477b-7ee0-4321-8eb2-a1dbc563a023",
+        "outputId": "90cc79aa-98ff-4d93-c747-646a1fca6dd5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 118
@@ -626,7 +626,7 @@
         " #validamos datos faltantes\n",
         " print(pd.isnull(data).sum())"
       ],
-      "execution_count": 136,
+      "execution_count": 176,
       "outputs": [
         {
           "output_type": "stream",
@@ -634,7 +634,7 @@
             "Año           0\n",
             "Mes           0\n",
             "Fecha         0\n",
-            "Antiguedad    0\n",
+            "Antiguedad    1\n",
             "Cant_Bajas    0\n",
             "dtype: int64\n"
           ],
@@ -650,23 +650,63 @@
       "source": [
         "data.dropna(subset = ['Antiguedad'] , axis=0, inplace=True)"
       ],
-      "execution_count": 135,
+      "execution_count": 177,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GjhCpQGmkfs4",
-        "outputId": "a2c0bf12-bf9b-4883-80cf-23499ac38519",
+        "id": "y27-gEoGtQ8Z",
+        "outputId": "5de84d1a-4eb2-4798-8737-62af14ff44f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 118
+          "height": 218
+        }
+      },
+      "source": [
+        "data['Antiguedad'].astype(str).astype(int)"
+      ],
+      "execution_count": 178,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0        6\n",
+              "1        6\n",
+              "2        7\n",
+              "3        6\n",
+              "4        6\n",
+              "        ..\n",
+              "17096    6\n",
+              "17097    3\n",
+              "17098    5\n",
+              "17099    6\n",
+              "17100    5\n",
+              "Name: Antiguedad, Length: 17100, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 178
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GjhCpQGmkfs4",
+        "outputId": "a491bad0-1fbf-4763-eeee-27894d491086",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
         }
       },
       "source": [
         "data.dtypes"
       ],
-      "execution_count": 137,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -674,7 +714,6 @@
             "text/plain": [
               "Año              int64\n",
               "Mes              int64\n",
-              "Fecha           object\n",
               "Antiguedad    category\n",
               "Cant_Bajas       int64\n",
               "dtype: object"
@@ -683,15 +722,26 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 137
+          "execution_count": 182
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "9cAY28XHDYGL"
+      },
+      "source": [
+        "data=data.drop(['Fecha'],axis=1)"
+      ],
+      "execution_count": 180,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "mEKHKvJIsa5C",
-        "outputId": "dceeea2a-2cbb-4059-fd54-92e9129f4d18",
+        "outputId": "6fcf6275-a434-41f4-bab5-4a7a663f9fc5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
@@ -700,7 +750,7 @@
       "source": [
         "data.corr(method ='pearson')"
       ],
-      "execution_count": 146,
+      "execution_count": 181,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -762,7 +812,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 146
+          "execution_count": 181
         }
       ]
     },
