--- a/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v8.ipynb
@@ -287,16 +287,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "Yb6GFguUFI8z",
-        "outputId": "f1e2df5d-5574-432e-8e6c-f974aee08f71",
+        "outputId": "ae116f4a-d4a0-4006-a89b-41bb6ea7dddd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 422
+          "height": 402
         }
       },
       "source": [
         "data"
       ],
-      "execution_count": 185,
+      "execution_count": 289,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -322,14 +322,9 @@
               "      <th></th>\n",
               "      <th>Año</th>\n",
               "      <th>Mes</th>\n",
+              "      <th>Fecha</th>\n",
+              "      <th>Antiguedad</th>\n",
               "      <th>Cant_Bajas</th>\n",
-              "      <th>Antiguedad_1</th>\n",
-              "      <th>Antiguedad_2</th>\n",
-              "      <th>Antiguedad_3</th>\n",
-              "      <th>Antiguedad_4</th>\n",
-              "      <th>Antiguedad_5</th>\n",
-              "      <th>Antiguedad_6</th>\n",
-              "      <th>Antiguedad_7</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -337,74 +332,44 @@
               "      <th>0</th>\n",
               "      <td>2019</td>\n",
               "      <td>11</td>\n",
+              "      <td>2019-01-11</td>\n",
+              "      <td>6</td>\n",
               "      <td>3</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>2020</td>\n",
               "      <td>4</td>\n",
+              "      <td>2020-01-04</td>\n",
+              "      <td>6</td>\n",
               "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>2019</td>\n",
               "      <td>11</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>2019-05-11</td>\n",
+              "      <td>7</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>2020</td>\n",
               "      <td>2</td>\n",
+              "      <td>2020-01-02</td>\n",
+              "      <td>6</td>\n",
               "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>2019</td>\n",
               "      <td>8</td>\n",
+              "      <td>2019-01-08</td>\n",
+              "      <td>6</td>\n",
               "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
@@ -415,93 +380,68 @@
               "      <th>17096</th>\n",
               "      <td>2019</td>\n",
               "      <td>8</td>\n",
+              "      <td>2019-01-08</td>\n",
+              "      <td>6</td>\n",
               "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>17097</th>\n",
               "      <td>2019</td>\n",
               "      <td>4</td>\n",
+              "      <td>2019-01-04</td>\n",
+              "      <td>3</td>\n",
               "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>17098</th>\n",
               "      <td>2019</td>\n",
               "      <td>11</td>\n",
+              "      <td>2019-01-11</td>\n",
+              "      <td>5</td>\n",
               "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>17099</th>\n",
               "      <td>2020</td>\n",
               "      <td>7</td>\n",
+              "      <td>2020-01-07</td>\n",
+              "      <td>6</td>\n",
               "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>17100</th>\n",
               "      <td>2019</td>\n",
               "      <td>3</td>\n",
+              "      <td>2019-03-23</td>\n",
+              "      <td>5</td>\n",
               "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>17100 rows × 10 columns</p>\n",
+              "<p>17100 rows × 5 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "        Año  Mes  Cant_Bajas  ...  Antiguedad_5  Antiguedad_6  Antiguedad_7\n",
-              "0      2019   11           3  ...             0             1             0\n",
-              "1      2020    4           1  ...             0             1             0\n",
-              "2      2019   11           1  ...             0             0             1\n",
-              "3      2020    2           1  ...             0             1             0\n",
-              "4      2019    8           1  ...             0             1             0\n",
-              "...     ...  ...         ...  ...           ...           ...           ...\n",
-              "17096  2019    8           1  ...             0             1             0\n",
-              "17097  2019    4           1  ...             0             0             0\n",
-              "17098  2019   11           1  ...             1             0             0\n",
-              "17099  2020    7           1  ...             0             1             0\n",
-              "17100  2019    3           1  ...             1             0             0\n",
+              "        Año  Mes      Fecha Antiguedad  Cant_Bajas\n",
+              "0      2019   11 2019-01-11          6           3\n",
+              "1      2020    4 2020-01-04          6           1\n",
+              "2      2019   11 2019-05-11          7           1\n",
+              "3      2020    2 2020-01-02          6           1\n",
+              "4      2019    8 2019-01-08          6           1\n",
+              "...     ...  ...        ...        ...         ...\n",
+              "17096  2019    8 2019-01-08          6           1\n",
+              "17097  2019    4 2019-01-04          3           1\n",
+              "17098  2019   11 2019-01-11          5           1\n",
+              "17099  2020    7 2020-01-07          6           1\n",
+              "17100  2019    3 2019-03-23          5           1\n",
               "\n",
-              "[17100 rows x 10 columns]"
+              "[17100 rows x 5 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 185
+          "execution_count": 289
         }
       ]
     },
@@ -509,7 +449,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "mEKHKvJIsa5C",
-        "outputId": "6fcf6275-a434-41f4-bab5-4a7a663f9fc5",
+        "outputId": "d8d557ad-92a0-438c-be38-48acd2c6a861",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
@@ -518,7 +458,7 @@
       "source": [
         "data.corr(method ='pearson')"
       ],
-      "execution_count": 181,
+      "execution_count": 293,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -580,7 +520,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 181
+          "execution_count": 293
         }
       ]
     },
